<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sis.captcha.sol.MainActivity$PlaceholderFragment">

    <!--<ImageView-->
    <!--android:id="@+id/imageView"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@+id/start"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginTop="18dp"-->
    <!--android:contentDescription="@string/app_name"-->
    <!--android:src="@drawable/ic_launcher" />-->
    <!--<TextView-->
        <!--android:id="@+id/lbkq"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_below="@+id/imageView"-->
        <!--android:layout_marginTop="0dp"-->
        <!--android:text="@string/app_name" />-->

    <Button
        android:id="@+id/start"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/start" />

    <EditText
        android:id="@+id/classCode"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/start"
        android:layout_below="@+id/start"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/class_code"
        android:inputType="numberSigned"
        android:maxLength="8"></EditText>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/classCode"
        android:layout_alignEnd="@+id/start"
        android:layout_toEndOf="@+id/classCode"
        android:text="@string/add_class" />

    <EditText
        android:id="@+id/class_queue"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/classCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:enabled="false"
        android:gravity="center_vertical|center"
        android:hint="@string/blank"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/outScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="0dp"
        android:textColor="@color/blue"
        android:text="@string/status" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/class_queue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_above="@+id/outScreen"
        android:layout_marginBottom="0dp"></ListView>

</RelativeLayout>